test/cases/enums/use_in_init.c
// RUN: %check -e %s

enum A
{
	X = sizeof(enum A) // CHECK: error: sizeof incomplete type enum A
};
